--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -13,6 +13,11 @@ login_check:
   methods: [POST]
   controller: App\Controller\UserController::login
 
+logout:
+  path: /logout
+  methods: [POST]
+  controller: App\Controller\UserController::logout
+
 register:
   path: /register
   controller: App\Controller\UserController::register
